assets/css/style.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@import
  "minima/skins/{{ site.minima.skin | default: 'classic' }}",
  "minima/initialize";

$news-entry-sep: 1.5em !default;

.site-logo {
    max-height: 44px;
    padding: 5px;
}

.site-header {
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  background: $background-color;
  z-index: 99999;

  @include media-query($on-palm) {
    position: static;
  }
}

.site-footer {
  background-color: $site-footer-background-color;

  a {
    color: $site-footer-link-base-color;
    text-decoration: none;

    &:visited {
      color: $site-footer-link-visited-color;
    }

    &:hover {
      color: $site-footer-link-hover-color;
      text-decoration: underline;
    }
  }
}

.footer-col-wrapper
{
  color: $site-footer-color;
}

// ====== Hero page ======

.page-header {
  background-position: 50% 50%;
  background-repeat: no-repeat;
  background-size: cover;
  height: 434px;
  height: 50vw;
  min-height: 200px;
  max-height: 434px;
}

.app-image {
  background-position: 50% 50%;
  background-repeat: no-repeat;
  background-size: contain;
  height: 434px;
  height: 50vw;
  min-height: 200px;
  max-height: 434px;
}

// ====== Sticky back-to-top ======

/* https://moderncss.dev/pure-css-smooth-scroll-back-to-top/ by Stephanie Eckles */

$back-to-top-width: 48px;
$back-to-top-height: 35px;

main {
  position: relative;
}
/* Smooth scrolling IF user doesn't have a preference due to motion sensitivities */
@media screen and (prefers-reduced-motion: no-preference) {
  html {
    scroll-behavior: smooth;
  }
}
.back-to-top-wrapper {
  clip: rect(0px, $back-to-top-width, auto, 0);

  // uncomment to visualize "track"
  // outline: 1px solid red;
  position: absolute;
  top: 100vh;
  right: $spacing-unit;
  // Optional, extends the final link into the
  // footer at the bottom of the page
  // Set to `0` to stop at the end of `main`
  bottom: -1px;
  // Required for best support in browsers not supporting `sticky`
  width: $back-to-top-width;
  // Disable interaction with this element
  pointer-events: none;
}
.back-to-top-link {
  display: inline-block;
  text-decoration: none;
  font-size: 2em;
  line-height: $back-to-top-height;
  text-align: center;
  width: $back-to-top-width;
  height: $back-to-top-height;
  border-radius: 6px 6px 0 0;
  background-color: $site-footer-background-color;
  /* emoji don't behave like regular fonts
     so this helped position it correctly */
  /*! padding: 0.25rem; */
  // `fixed` is fallback when `sticky` not supported
  position: fixed;
  // preferred positioning, requires prefixing for most support, and not supported on Safari
  // @link https://caniuse.com/#search=position%3A%20sticky
  position: -webkit-sticky;
  position: sticky;
  // reinstate clicks
  pointer-events: all;
  // achieves desired positioning within the viewport
  // relative to the top of the viewport once `sticky` takes over, or always if `fixed` fallback is used
  top: calc(100vh - #{$back-to-top-height});
  opacity: 0.9;

  color: white !important;
  text-decoration: none !important;
  &:hover, &:focus
  {
    background-color: $seqan-color;
  }
}

// ====== Button Style ======
.button {
  padding: 13px 19px;
  text-align: center;
}
.button, .button:visited, .button:hover {
  color: black;
  text-decoration: none;
}
.button-lightgray {
  border: 1px solid #eaeaea;
  background: #eaeaea;
}
.button-lightgray:hover {
  border: 1px solid $seqan-color;
  background: $seqan-color;
}
.button-lightgray:active, .button-lightgray:focus {
  border: 1px solid #eaeaea;
  background: $seqan-color;
}


.button-full-width {
  display: block;
}

// ====== Heading ======
.heading-entries {
  display: flex;
  flex-flow: row wrap;
  margin-left: -$news-entry-sep;
}
.heading-entry, .heading-body {
  display: flex;
  flex-flow: column nowrap;
}
.heading-body, .heading-text {
  flex: auto;
}
.heading-entry {
  border: 1px solid $seqan-color;

  margin-top: 1em;
  margin-left: $news-entry-sep;

  box-sizing: border-box;

  width: calc(100% / 3 - #{$news-entry-sep});

  @include media-query($on-laptop) {
    width: calc(100% / 2 - #{$news-entry-sep});
  }

  @include media-query($on-palm) {
    width: 100%;
  }
}

.heading-entries {
  margin-bottom: $spacing-unit;
}
.heading-header {
  font-size: 1.25em;
  text-align: center;
  text-transform: uppercase;
}
.heading-link {
  display: block;
}
.heading-link
{
    &:hover, &:focus
    {
        .heading-icon
        {
            background: #9e9e9e;
        }
    }
}
.heading-icon {
  display: block;
  box-sizing: border-box;

  width: 100px;
  height: 100px;
  line-height: 100px;

  margin: #{$spacing-unit / 2} auto;
  border-radius: 50%;
  background: $seqan-color;
  transition: background-color .3s, color .3s;
}
.heading-icon img {
  width: 50px;
  // height: 100px;
  // object-fit: contain;
  // border-radius: 100px;
  // padding: 5px;
  box-sizing: border-box;
  filter: invert(1);
}
.heading-body {
  padding: #{$spacing-unit / 2} #{$spacing-unit / 2} #{$spacing-unit / 2};
}

// ====== News Style ======

.news-entries {
  display: flex;
  flex-flow: row wrap;
  margin-left: -$news-entry-sep;
}
.news-entry, .news-body {
  display: flex;
  flex-flow: column nowrap;
}
.news-body, .news-text {
  flex: auto;
}
.news-entry {
  border: 1px solid $seqan-color;

  margin-top: 1em;
  margin-left: $news-entry-sep;

  box-sizing: border-box;

  width: calc(100% / 3 - #{$news-entry-sep});

  @include media-query($on-laptop) {
    width: calc(100% / 2 - #{$news-entry-sep});
  }

  @include media-query($on-palm) {
    width: 100%;
  }
}
.news-body {
  padding: 0em 0.75em 0.75em;
}

.news-header {
  font-size: 1.25em;
  color: white;
}
.news-date-month-year {
  background: $seqan-color;
  padding: 1em 0em;

  text-transform: uppercase;
  text-align: center;
}
.news-date-day {
  color: white;
  font-size: 2.25em;
  font-weight: bold;

  margin: 0 auto;
  position: relative;
  text-align: center;
  line-height: 0.5em;
  vertical-align: middle;
  width: 2.5em;
  height: 1.5em;

}
.news-date-day::before {
  display: block;
  content: "";
  width: 2.5em;
  height: 2.5em;
  border-radius: 50%;
  background: rgb(254, 222, 9);
  position: absolute;
  z-index: -1;
  left: 0px;
  top: -1.5em;
}
.news-title {
  font-size: 1.5em;
  text-transform: uppercase;
  text-align: center;

  margin-bottom: 0.75em;
}
.news-text {
  min-height: 150px;
}

// ====== People Style ======

.person-summary {
    padding: 0.5em;
    @include relative-font-size(1.5);
    border-radius: 6px;

    &:hover {
        background-color: $seqan-color;
        transition: 0.2s;
    }
}

.person-avatar {
    object-fit: cover;
    height: 3.5em;
    width: 3.5em;
    margin-right: $spacing-unit / 2;
    border-radius: 50%;
}

.person-bio {
    margin-left: $spacing-unit;
}

.person-name-position {
    display: inline-block;
    vertical-align: middle;
}

.person-name, .person-position {
    display: block;
}

.person-social {
    margin-right: $spacing-unit / 2;
}
.person-social, .person .social-media-list {
    display: inline-block;
}
.person .social-media-list {
    vertical-align: middle;
}

// ====== Publications Style ======

.citation {
    color: grey;
}

// ====== Subpages Style ======

.fig-caption{
  color: grey;
}

.figures {
  display: flex; // all figures will be on the same row
  @include media-query($on-palm) { // ... except on smartphones
    flex-wrap: wrap;
  }
}

